--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="card-body">
                         <h5 class="card-title">KinoBaza Bootstrap</h5>
                         <p class="card-text">Bootstrapiga tehtud versioon.</p>
-                        <a href="KinoBaza2/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                        <a href="KinoBaza Bootstrap 2/index.html" class="gradient-btn w-100">Vaata Projekti</a>
                     </div>
                 </div>
             </div>
