Исправил ошибку There isn't a GitHub Pages site here.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="card-body">
                         <h5 class="card-title">GamingMice</h5>
                         <p class="card-text">Puhtas HTML/CSS-is.</p>
-                        <a href="GamingMice/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                        <a href="GamingMice Original/index.html" class="gradient-btn w-100">Vaata Projekti</a>
                     </div>
                 </div>
             </div>
