исправил внешний вид сайта GamingMice

--- a/GamingMice Original/index.html
+++ b/GamingMice Original/index.html
@@ -7,48 +7,49 @@
        <meta name="keywords" content="мышки, клавиатуры">
        <link rel="stylesheet" href="assets/css/style.css">
        <link rel="preconnect" href="https://fonts.googleapis.com">
-       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+       
 </head>
 <body>
        <div class="main">
-              <header>
+              <div class="header">
                      <div class="logo">
                             <div class="logo_text">
                                    <h1><a href="index.html">MiceBase</a></h1>
                                    <h2>Девайсы для вашего комфорта!</h2>
                             </div>
                      </div>
-                     <nav class="menubar">
-                            <ul class="menu">
-                                   <li class="selected"><a href="index.html">Главная</a></li>
-                                   <li><a href="mouses.html">Мышки</a></li>
-                                   <li><a href="keyboards.html">Клавиатуры</a></li>
-                                   <li><a href="rating_Devices.html">Рейтинг девайсов</a></li>
-                                   <li><a href="contact.html">Контакты</a></li>
-                            </ul>
-                     </nav>
+              <div class="menubar">
 
-                     <!-- Language Switcher Dropdown -->
-                     <div class="language-switcher">
-                            <button class="dropdown-btn">Other languages ▼</button>
-                            <div class="dropdown-content">
-                                <a href="index.html">Русский</a>
-                                <a href="index_en.html">English</a>
-                            </div>
+                     <ul class="menu">
+                            <li class="selected"><a href="index.html">Главная</a></li>
+                            <li><a href="mouses.html">Мышки</a></li>
+                            <li><a href="keyboards.html">Клавиатуры</a></li>
+                            <li><a href="rating_Devices.html">Рейтинг девайсов</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
+                     </ul>
+              </div>
+
+              <!-- Language Switcher Dropdown -->
+              <div class="language-switcher">
+                     <button class="dropdown-btn">Other languages ▼</button>
+                     <div class="dropdown-content">
+                         <a href="index.html">Русский</a>
+                         <a href="index_en.html">English</a>
                      </div>
-              </header>
-
-              <section class="site_content">
-                     <aside class="sidebar_container">
-                            <article class="sidebar">
+              </div>
+              
+              <div class="site_content">
+                     <div class="sidebar_container">
+                            <div class="sidebar">
                                    <h2>Поиск</h2>
                                    <form method="post" action="#" id="search_form">
                                           <input type="search" name="search_field" placeholder="Ваш запрос" />
                                           <input type="submit" class="btn" value="найти" />
                                    </form>
-                            </article>
-                            <article class="sidebar">
+                            </div>
+                            <div class="sidebar">
                                    <h2>Вход</h2>
                                    <form method="post" action="#" id="login">
                                           <input type="text" name="login_field" placeholder="Логин" />
@@ -58,24 +59,24 @@
                                                  <span><a href="#">Забыли пароль?</a></span> | <span><a href="#">Регистрация</a></span>
                                           </div>
                                    </form>
-                            </article>
-                            <article class="sidebar">
+                            </div>
+                            <div class="sidebar">
                                    <h2>Новости</h2>
                                    <span>28.02.2018</span>
                                    <p>Мы запустили расширенный поиск девайсов</p>
                                    <a href="#">читать</a>
-                            </article>
-                            <article class="sidebar">
+                            </div>
+                            <div class="sidebar">
                                    <h2>Рейтинг девайсов</h2>
                                    <ul>
                                           <li><a href="show_mouse1.html">ZA-13-DW</a><span class="rating_sidebar">8.1</span></li>
                                           <li><a href="show_mouse2.html">Logitech G Pro X</a><span class="rating_sidebar">8.0</span></li>
                                           <li><a href="show_mouse3.html">Viper-V3</a><span class="rating_sidebar">7.5</span></li>
-                                          <li><a href="show_mouse4.html">Dragonfly F1 PRO</a><span class="rating_sidebar">7.4</span></li>
+                                          <li><a href="show_mouse4.html">Dragonfly F1 PRO</a><span class="rating_sidebar">7.4</span></ли>
                                    </ul>
-                            </article>
-                     </aside>
-                     <article class="content">
+                            </div>
+                     </div>
+                     <div class="content">
                             <h1>Мышки</h1>
                             <div class="mouse_block">
                                    <a href="show_mouse1.html"><img src="assets/img/1-za13-dw-top.png" alt="ZA-13-DW"></a>
@@ -85,7 +86,7 @@
                             </div>
                             <h1>Клавиатуры</h1>
                             <div class="mouse_block">
-                                   <a href="show_keyboard1.html"><img src="assets/img/30.png" alt="DK Keyboard"></a>
+                                   <a href="show_keyboard1.html"><img src="assets/img/30.png" alt="Dead Keyboard"></a>
                                    <a href="show_keyboard2.html"><img src="assets/img/DPP 87 Ink.png" alt="Silicon Keyboard"></a>
                                    <a href="show_keyboard3.html"><img src="assets/img/Keyboards  DPO 87 Violet Horizons.png" alt="Breaking Keyboard"></a>
                                    <a href="show_keyboard4.html"><img src="assets/img/WOOTING 60HE.png" alt="X-Files Keyboard"></a>
@@ -105,19 +106,19 @@
                             <div class="posts_content">
                                    <p>Logitech G Pro X Superlight - отличная мышка для тех, кто ценит минимальный вес и высокую производительность.</p>
                             </div>
-                            <p><a href="#">читать</a></p>
-                     </article>
-              </section>
-              <footer>
+                            <p><a href="#">читать</a></п>
+                     </div>
+              </div>
+              <div class="footer">
                      <p>
                             <a href="index.html">Главная</a> |
-                            <a href="mouses.html">Мышки</a> |
+                            <a href="mouses.html">Мышки</а> |
                             <a href="keyboards.html">Клавиатуры</a> |
                             <a href="rating_Devices.html">Рейтинг девайсов</a> |
                             <a href="contact.html">Контакты</a>
                      </p>
                      <p>MiceBase - 2024</p>
-              </footer>
-       </main>
+              </div>
+       </div>
 </body>
 </html>
