--- a/GamingMice Original/show_mouse1.html
+++ b/GamingMice Original/show_mouse1.html
@@ -11,24 +11,25 @@
 
        <div class="main">
 
-              <header>
+              <div class="header">
                      <div class="logo">
-                         <div class="logo_text">
-                             <h1><a href="index.html">MiceBase</a></h1>
-                             <h2>Девайсы для вашего комфорта!</h2>
-                         </div>
+                            <div class="logo_text">
+                                   <h1><a href="index.html">MiceBase</a></h1>
+                                   <h2>мышки, клавиатуры</h2>
+                            </div>
                      </div>
-                 
-                     <nav class="menubar">
-                         <ul class="menu">
-                             <li class="selected"><a href="index.html">Главная</a></li>
-                             <li><a href="mouses.html">Мышки</a></li>
-                             <li><a href="keyboards.html">Клавиатуры</a></li>
-                             <li><a href="rating_Devices.html">Рейтинг девайсов</a></li>
-                             <li><a href="contact.html">Контакты</a></li>
-                         </ul>
-                     </nav>
-                 </header>
+
+              <div class="menubar">
+
+                <ul class="menu">
+                    <li class="selected"><a href="index.html">Главная</a></li>
+                    <li><a href="mouses.html">Мышки</a></li>
+                    <li><a href="keyboards.html">Клавиатуры</a></li>
+                    <li><a href="rating_Devices.html">Рейтинг девайсов</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
+                 </ul>
+              </div>
+       </div>
 
        <div class="site_content">
 
@@ -132,7 +133,7 @@
               </div>
        </div>
 
-       <footer>
+       <div class="footer">
         <p>
             <a href="index.html">Главная</a> |
             <a href="mouses.html">Мышки</а> |
@@ -141,7 +142,7 @@
             <a href="contact.html">Контакты</a>
      </p>
      <p>MiceBase - 2024</p>
-       </footer>
+       </div>
 
 </body>
 </html>
