--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-6 col-lg-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h5 class="card-title">Canvas</h5>
+                    <p class="card-text">HTML/JavaScript</p>
+                    <a href="Canvas/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     </main>
 
     <!-- Footer -->
