--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Canvas</h5>
                     <p class="card-text">HTML/JavaScript</p>
-                    <a href="Canvas/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                    <a href="CanvasJSGame/index.html" class="gradient-btn w-100">Vaata Projekti</a>
                 </div>
             </div>
         </div>
