--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header class="text-center py-5 bg-gradient text-white fade-in" style="animation-delay: 0.1s;">
         <h1 class="display-4 fw-bold">Minu Portfolio</h1>
         <p class="lead">Dmitri Allikvee</p>
-        
     </header>
 
     <!-- Main Content -->
@@ -49,8 +48,17 @@
                     </div>
                 </div>
             </div>
-            
-            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.6s;">
+
+            <div class="col-md-4 col-lg-4 fade-in" style="animation-delay: 0.6s;">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Monovision Studio Landing</h5>
+                        <p class="card-text">HTML/CSS</p>
+                        <a href="Landing/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.7s;">
                 <div class="card shadow-sm">
                     <div class="card-body">
                         <h5 class="card-title">GamingMice Bootstrap</h5>
@@ -58,9 +66,6 @@
                         <a href="GamingMice2/index.html" class="gradient-btn w-100">Vaata Projekti</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.7s;">
-                <!-- Пустое пространство -->
             </div>
             <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.8s;">
                 <div class="card shadow-sm">
