изменил размеры блоков у img и также сделал вопросы в столбик

--- a/Landing_DragonFly/index.html
+++ b/Landing_DragonFly/index.html
@@ -91,7 +91,7 @@
                     <img src="img/works/dragonfly-2.jpg" alt="Dragonfly side view">
                     <img src="img/works/dragonfly-3.jpg" alt="Dragonfly RGB lighting">
                     <img src="img/works/dragonfly-4.jpg" alt="Dragonfly ergonomic design">
-                    <img src="img/works/dragonfly-5.jpg" alt="Dragonfly gaming setup">
+                    <img class = "img5d" src="img/works/dragonfly-5.jpg" alt="Dragonfly gaming setup">
                 </div>
             </div>
         </section>
@@ -154,6 +154,15 @@
                             It also includes a wired option for maximum reliability.
                         </p>
                     </div>
+                    <div class="faq__list">
+                        <div class="faq__item">
+                            <h3 data-translate="faqQuestion3" class="faq__question">What makes the Dragonfly F1 unique?</h3>
+                            <p data-translate="faqAnswer3" class="faq__answer">
+                                The Dragonfly F1 is designed with lightweight portability, precision tracking, and customizable 
+                                features to deliver unmatched performance for both gaming and professional use.
+                            </p>
+                        </div>
+                    
                 </div>
             </div>
         </section>
