поменял шрифты при этом для одного языка один шрифт для другого другой(Landing Vfn)

--- a/Landing_DragonFly/index.html
+++ b/Landing_DragonFly/index.html
@@ -24,8 +24,9 @@
                 
                 <!-- Language buttons (hidden on small screens) -->
                 <div class="language-switcher">
-                    <button onclick="translatePage('en')">English</button>
-                    <button onclick="translatePage('ru')">Русский</button>
+                    <button onclick="translatePage('en')" lang="en">English</button>
+                    <button onclick="translatePage('ru')" lang="ru">Русский</button>
+
                 </div>
             </div>
             
