--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
             <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.8s;">
                 <div class="card shadow-sm">
                     <div class="card-body">
+                        <h5 class="card-title">wireframe</h5>
+                        <p class="card-text">HTML/JavaScript/CSS</p>
+                        <a href="wireframe/wireframe.html" class="gradient-btn w-100">Vaata Projekti</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.8s;">
+                <div class="card shadow-sm">
+                    <div class="card-body">
                         <h5 class="card-title">VGN Dragonfly Landing</h5>
                         <p class="card-text">HTML/CSS/JavaScript</p>
                         <a href="Landing_DragonFly/index.html" class="gradient-btn w-100">Vaata Projekti</a>
