--- a/wireframe/wireframe.html
+++ b/wireframe/wireframe.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -112,6 +114,65 @@
             </div>
         </section>
 
+        <!-- ... предшествующий контент ... -->
+
+<section class="mouse-cards">
+    <h2>Mice</h2>
+    <div class="card">
+        <h3>Zowie ZA13</h3>
+        <div class="card-image-container">
+            <img src="imgs/zowie-za13.png" alt="Zowie ZA13 Mouse" />
+        </div>
+        <p>Lightweight, comfortable for esports, universal shape for any grip.</p>
+    </div>
+    <div class="card">
+        <h3>Zowie EC2</h3>
+        <div class="card-image-container">
+            <img src="imgs/zowie-ec2.png" alt="Zowie EC2 Mouse" />
+        </div>
+        <p>Classic ergonomic shape, optimized for right-hand use.</p>
+    </div>
+    <div class="card">
+        <h3>Zowie FK2</h3>
+        <div class="card-image-container">
+            <img src="imgs/zowie-fk2.png" alt="Zowie FK2 Mouse" />
+        </div>
+        <p>Thin body, perfect for quick movements and low sensitivity.</p>
+    </div>
+</section>
+
+<section class="carousel">
+    <!-- Обёртка для всех слайдов -->
+    <div class="carousel-container">
+      <!-- Слайд 1 -->
+      <div class="carousel-slide">
+        <img src="imgs/zowie-za13.png" alt="Картинка 1">
+      </div>
+      <!-- Слайд 2 -->
+      <div class="carousel-slide">
+        <img src="imgs/zowie-ec2.png" alt="Картинка 2">
+      </div>
+      <!-- Слайд 3 -->
+      <div class="carousel-slide">
+        <img src="imgs/zowie-fk2.png" alt="Картинка 3">
+      </div>
+      <!-- Слайд 4 -->
+      <div class="carousel-slide">
+        <img src="imgs/zowie-za13.png" alt="Картинка 4">
+      </div>
+      <!-- Слайд 5 -->
+      <div class="carousel-slide">
+        <img src="imgs/zowie-ec2.png" alt="Картинка 5">
+      </div>
+    </div>
+  
+
+  </section>
+  
+
+<!-- ... следующий контент ... -->
+
+
         <section class="signup">
             <h2>Sign Up / Get Started</h2>
             <form id="emailForm">
@@ -160,6 +221,7 @@
     <script src="js/script.js"></script>
     <script src="js/benefits-slider.js"></script>
     <script src="js/email-validation.js"></script>  
+
 
 </body>
 </html>
