обновил сайт wireframe

--- a/wireframe/wireframe-light.html
+++ b/wireframe/wireframe-light.html
@@ -201,9 +201,9 @@
 
     <footer>
         <nav class="footer-menu">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Support</a>
+            <a href="wireframe-light.html">Home</a>
+            <a href="zoweiabout-light.html">About</a>
+            <a href="cart-light.html">Cart</a>
             <a href="#">Overview</a>
         </nav>
         <div class="social-media">
