--- a/index.html
+++ b/index.html
@@ -94,8 +94,12 @@
                     </div>
                 </div>
             </div>
+            <h2 class="display-4 fw-bold">Figma</h1>
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/iUvE9JJcnfcnao6b7kd8vg/FoodApp?node-id=0-1&embed-host=share" allowfullscreen></iframe>
             
         </div>
+
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/s8zwczWaZpVuii23rxXAhJ/Untitled?node-id=0-1&embed-host=share" allowfullscreen></iframe>
     </main>
 
     <!-- Footer -->
