--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="card shadow-sm">
             <div class="card-body">
                 <h5 class="card-title">FoodApp</h5>
-                <p class="card-text">Minimalistlik tervisliku toidu rakenduse disain.</p>
+                <p class="card-text">Veebilehe disain toidu kohaletoimetamiseks.</p>
                 <div class="ratio ratio-16x9">
                     <iframe 
                         src="https://embed.figma.com/design/iUvE9JJcnfcnao6b7kd8vg/FoodApp?node-id=0-1&embed-host=share" 
@@ -119,7 +119,7 @@
         <div class="card shadow-sm">
             <div class="card-body">
                 <h5 class="card-title">SportApp</h5>
-                <p class="card-text">Testdisain või wireframe katsetus.</p>
+                <p class="card-text">Sport</p>
                 <div class="ratio ratio-16x9">
                     <iframe 
                         src="https://embed.figma.com/design/s8zwczWaZpVuii23rxXAhJ/Untitled?node-id=0-1&embed-host=share" 
@@ -136,7 +136,7 @@
         <div class="card shadow-sm">
             <div class="card-body">
                 <h5 class="card-title">Ülesanne-kohvik</h5>
-                <p class="card-text">Kohviku landing-page disain.</p>
+                <p class="card-text">Minimalistlik tervisliku toidu rakenduse disain.</p>
                 <div class="ratio ratio-16x9">
                     <iframe 
                         src="https://embed.figma.com/design/hQn18bq40Oab9Aiz8lsS5U/%C3%9Clesanne-kohvik?node-id=0-1&embed-host=share" 
