--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.8s;">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Energy Landing</h5>
+                        <p class="card-text">HTML/CSS/JavaScript</p>
+                        <a href="Energy%20Landing/index.html" class="gradient-btn w-100">Vaata Projekti</a>
+                    </div>
+                </div>
+            </div>
 
             
             <!-- Заголовок раздела Figma -->
@@ -214,6 +223,19 @@
                         <p class="card-text">Furniture Shop</p>
                         <div class="ratio ratio-16x9">
                             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/ZzogaDRtZprwTjQHVH4may/Furniture-Landing?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Вторая карточка Figma -->
+            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 1.1s;">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Energy Landing</h5>
+                        <p class="card-text">Energy Shop</p>
+                        <div class="ratio ratio-16x9">
+                            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/wT27ySZYlhvEFNKzhDRfzB/Energy-Landing?node-id=0-1&embed-host=share" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -334,6 +356,18 @@
 
                  <div class="ratio ratio-16x9">
                      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/ZzogaDRtZprwTjQHVH4may/Furniture-Landing?node-id=56-12&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&embed-host=share" allowfullscreen></iframe>
+                 </div>
+             </div>
+         </div>
+     </div>
+
+     <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 1.0s;">
+         <div class="card shadow-sm">
+             <div class="card-body">
+                 <h5 class="card-title">Energy Landing</h5>
+
+                 <div class="ratio ratio-16x9">
+                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/wT27ySZYlhvEFNKzhDRfzB/Energy-Landing?node-id=42-31&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=3%3A200&embed-host=share" allowfullscreen></iframe>
                  </div>
              </div>
          </div>
