--- a/index.html
+++ b/index.html
@@ -307,6 +307,59 @@
                 </div><!-- /.card -->
             </div><!-- /.col -->
 
+            <div class="col-md-6 col-lg-4 fade-in" style="animation-delay: 0.8s;">
+                <div class="card shadow-sm">
+                    <div class="card-body d-flex flex-column gap-2">
+                        <h5 class="card-title">PC-Components-Store</h5>
+                        <p class="card-text">HTML/CSS/JavaScript</p>
+
+                        <!-- Обычная кнопка "Vaata Projekti" -->
+                        <a href="PC-Components-Store/index.html" class="gradient-btn w-100 mb-2">
+                            Vaata Projekti
+                        </a>
+
+                        <!-- Кнопка с иконкой Figma, выпадающее меню -->
+                        <div class="btn-group">
+                            <button
+                                    type="button"
+                                    class="gradient-btn w-100 mb-2"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false"
+                            >
+                                <!-- Иконка Figma (пример) -->
+                                <img
+                                        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg"
+                                        alt="Figma Icon"
+                                        style="width: 20px; height: 20px; margin-right: 8px;"
+                                />
+                                Figma
+                            </button>
+                            <ul class="dropdown-menu w-100 text-center">
+                                <li>
+                                    <a
+                                            class="dropdown-item"
+                                            href=https://embed.figma.com/design/1neoQH5nLuydy0nJrdjBUN/PC-Components-Store?node-id=0-1&embed-host=share"
+                                            target="_blank"
+                                    >
+                                        Figma Disain
+                                    </a>
+                                </li>
+                                <li>
+                                    <a
+                                            class="dropdown-item"
+                                            href="https://www.figma.com/proto/1neoQH5nLuydy0nJrdjBUN/PC-Components-Store?node-id=0-1&t=nSOzfkRR0ivTC8zj-1"
+                                            target="_blank"
+                                    >
+                                        Figma Prototüüb
+                                    </a>
+                                </li>
+                            </ul>
+                        </div> <!-- /.btn-group -->
+
+                    </div><!-- /.card-body -->
+                </div><!-- /.card -->
+            </div><!-- /.col -->
+
 
             <!-- Заголовок раздела Figma -->
     <h2 class="text-center mb-4 fade-in" style="animation-delay: 0.9s;">Figma</h2>
